# SegmentationFixer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TODO.md  download_coco.py  fix_segments.py  main.py  pyproject.toml  requirements.txt  test_ui.py
backend/: main.py
docs/: algorithm_comparison.md  roadmap.md  synthetic_evaluation_plan.md
examples/: generate_demo_data.py
examples/demo_data/: demo_001_metadata.json  demo_002_metadata.json  demo_004_metadata.json  demo_007_metadata.json  demo_010_metadata.json
examples/demo_data/accepted/: demo_005_metadata.json  demo_006_metadata.json  demo_008_metadata.json  demo_metadata.json
examples/demo_data/rejected/: demo_003_metadata.json  demo_009_metadata.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
src/: advanced_refinement.py  fastsam_wrapper.py  generate_multi_algorithm_variations.py  promoters.py  segmentation_fixer.py  utils.py
tests/: test_logic.py  test_react_app.py
