[project]
name = "segmentationfixer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.123.0",
    "fastsam",
    "gradio==3.35.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "segment-anything>=1.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics==8.0.239",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-playwright>=0.7.2",
    "ruff>=0.14.7",
    "zuban>=0.2.3",
]

[tool.uv.sources]
fastsam = { git = "https://github.com/CASIA-IVA-Lab/FastSAM.git" }
